feat: add battery status sharing
